--- a/src/main.scss
+++ b/src/main.scss
@@ -162,12 +162,12 @@ body{
         }
     }
 
-    @media (max-width: 1440px){
+    @media (max-width: 1920px){
         width: 90%;
     }
 
     @media (max-width: 767px){
-        width: 240px;
+        width: 70%;
         margin: 0 auto;
     }
 }
