anulando as linhas de código respectivas a citações e slides de 'CREW'

--- a/src/main.scss
+++ b/src/main.scss
@@ -155,7 +155,7 @@ body{
     margin: 16px auto;
 
     &__group{
-        display: none;
+        display: hidden;
 
         &--active{
             display: block;
